--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Beta2 
	- Added /bin/fix_filenames.inc for correcting filenames with
		invalid chars
	- Removed album art add on Verify now that there is a distinct
		action for it 
	- Added ICONV check to ensure filenames are of correct charset 
		before inserting into the database
	- Fixed issue with encoding of id3v1/v2 tags
	- Fixed an issue with the clean function for playlists
	- DB Update, fixes the playlist create issue with full strict on
		MySQL 5.x
	- Corrected mime type for JPG (Thx CoF)
	- Added Catalog Last Update and Last Add times to API Handshake. 
	- Fixed Remember Me Cookie so it's actually set
	- Removed some invalid queries that were not needed, tweaked logic
		of no_session to avoid useless query
	- Added Greek Translation ( Thx Panayotis Tsirigotis )
	- Fixed browse issue when adding filters under specific conditions
	- Removed ip2int, int2ip and replaced with standard PHP functions
	- Updated Russian Translation and plural fixes ( Thx littlesavage )
	- Fixed Sorting on Admin->Browse Users
	- Fixed Shoutbox and shoutbox management (pb1dft)
	- Fixed some minor glitches in user registration ( pb1dft )
	- Fixed typo that caused mail to always mail to everyone. 
	- Fixed an issue with user auth in XML API always registering as
		system (Thx purdyk)
	- Fixed issue with Update All and multiple catalogs not correctly
		reseting changed album set
	- Added ability to filter disabled songs from duplicate check on 
		by default (Thx joh6nn) 
	- Added new rating images (Thx greengeek)
	- Added check for old database versions, prevent upgrade if too old
	- Fixed issue with user creation (Thx yoog)
	- Fixed Now Playing refresh